feature insertion of timer

--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
       </section>
     </div>
 
+
     <div class="container d-flex justify-content-center">
-      <div id="tela1" class="tela tela-centro visivel">
+
+      <div id="tela0" class="tela tela-centro visivel">
+        <h2>Tempo desde o nosso sim:</h2>
+        <p id="tempo">Calculando...</p>
+        <p>ou</p>
+        <p id="tempo_anos">Calculando...</p>
+        <button class="mudaTela btn-rosa">Rever o Pedido</button>
+      </div>
+
+      <div id="tela1" class="tela tela-centro">
         <h1>Bem-vinda</h1>
         <p>Você está pronta?</p>
         <button class="mudaTela btn-rosa">Começar</button>
